--- a/sandbox/slides-iuc2018.html
+++ b/sandbox/slides-iuc2018.html
@@ -271,9 +271,9 @@
       init: function() {
                 console.log("init");
         var seq = O.Triggers.Sequential();
-        var baseurl = this.baseurl = 'http://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}.png';
+        var baseurl = this.baseurl = 'https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}.png';
         var map = this.map = L.map('map').setView([0, 0.0], 4);
-        var basemap = this.basemap = L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png', {
+        var basemap = this.basemap = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png', {
           attribution: 'data OSM - map CartoDB'
         }).addTo(map);
 
@@ -303,7 +303,7 @@
         this.story.clear();
 
         if (this.baseurl && (this.baseurl !== actions.global.baseurl)) {
-          this.baseurl = actions.global.baseurl || 'http://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}.png';
+          this.baseurl = actions.global.baseurl || 'https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}.png';
 
           this.basemap.setUrl(this.baseurl);
 
@@ -333,7 +333,7 @@
 
                    // sublayer.setSQL("SELECT * FROM "+layer_name+filter)
                   self.map.addLayer(layer);
-                 var labelLayer = L.tileLayer('http://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}.png', {
+                 var labelLayer = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}.png', {
           attribution: 'data OSM - map CartoDB'
         }).addTo(self.map);
                          labelLayer.bringToFront();
