--- a/sandbox/slides-iuc2018.html
+++ b/sandbox/slides-iuc2018.html
@@ -253,10 +253,10 @@
     <span class="author"><strong id="author">By Name using</strong> <a href="http://cartodb.github.io/odyssey.js/">Odyssey.js</a><span>
   </div>
  <div id="md_template" style="display:none;">```
--baseurl: "http://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}.png"
+-baseurl: "https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}.png"
 -title: "Internet User Classification 2018"
 -author: "Geographic Data Science Lab"
--vizjson: "http://gdsl.carto.com/u/alexandros/api/v2/viz/1f825ac9-5202-4ea2-af2b-e3090fd174ea/viz.json"
+-vizjson: "https://gdsl.carto.com/u/alexandros/api/v2/viz/1f825ac9-5202-4ea2-af2b-e3090fd174ea/viz.json"
 ```
 
 #Internet User Classification (IUC)
