--- a/sandbox/slides-iuc2018.html
+++ b/sandbox/slides-iuc2018.html
@@ -411,7 +411,7 @@ Although not all seaside locations are like this, and in some more affluent coas
         // }).addTo(map);
 
 var basemap = this.basemap = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}.png', {
-          attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
+          attribution: 'Map tiles by CartoDB; Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
   subdomains: 'abcd',
   minZoom: 0,
   maxZoom: 20,
@@ -463,7 +463,7 @@ var basemap = this.basemap = L.tileLayer('https://{s}.basemaps.cartocdn.com/ligh
 
         if (actions.global.vizjson && !this.cartoDBLayer) {
           if (!this.created) { // sendCode debounce < vis loader
-            cdb.vis.Loader.get('http://gdsl.carto.com/u/alexandros/api/v2/viz/1f825ac9-5202-4ea2-af2b-e3090fd174ea/viz.json', function(vizjson) {
+            cdb.vis.Loader.get('https://gdsl.carto.com/u/alexandros/api/v2/viz/1f825ac9-5202-4ea2-af2b-e3090fd174ea/viz.json', function(vizjson) {
               self.map.fitBounds(vizjson.bounds);
                // console.log(self.map);
               cartodb.createLayer(self.map, vizjson)
