Latest version - for meeting

--- a/sandbox/slides-iuc2018.html
+++ b/sandbox/slides-iuc2018.html
@@ -292,7 +292,9 @@ However, in some places, even though the infrastructure does not provide a const
 - center: [50.842941,-0.131312]
 - zoom: 13
 ```
-Although not all seaside locations are like this, and in some more affluent coastal areas there are strong patterns of engagement. This is a map of Brighton on the South Coast of England, and a very large part of the city consists of areas classified as either "e-Expertise" or "e-Professionals".
+Although not all seaside locations are like this, and in some more affluent coastal areas there are strong patterns of engagement.
+
+This is a map of Brighton on the South Coast of England, and a very large part of the city consists of areas classified as either "e-Expertise" or "e-Professionals".
 
 ![Brighton Pier](https://upload.wikimedia.org/wikipedia/commons/e/e0/Brighton_Pier_at_dusk.jpg)
 
